--- a/v1/views/campgrounds.ejs
+++ b/v1/views/campgrounds.ejs
@@ -1,16 +1,34 @@
 <%- include('partials/header'); -%>
 
-<h1>This is campgrounds page</h1>
-
-<ul>
-  <% campgrounds.forEach(function(campground){%>
-  <li>
-    <div>
-      <h4><%= campground.name %></h4>
-      <img src="<%= campground.image %>" alt="<%= campground.name %>" />
+<div class="container">
+  <header class="jumbotron">
+    <div class="container">
+      <h1>Welcome to YelpCamp</h1>
+      <p>View our lovely animals</p>
+      <p>
+        <a class="btn btn-primary btn-large" href="/campgrounds/new"
+          >Add new image</a
+        >
+      </p>
     </div>
-  </li>
-  <% }) %>
-</ul>
+  </header>
 
+  <div class="row" style="display: flex; flex-wrap: wrap;">
+    <% campgrounds.forEach(function(campground){%>
+    <div class="col-md-3 col-sm-6" style="margin-bottom: 20px;">
+      <div class="img-thumbnail">
+        <img
+          src="<%= campground.image %>"
+          alt="<%= campground.name %>"
+          class="img-responsive"
+        />
+        <div class="caption">
+          <h4><%= campground.name %></h4>
+        </div>
+      </div>
+    </div>
+
+    <% }) %>
+  </div>
+</div>
 <%- include('partials/footer'); -%>
