--- a/v4/views/comments/new.ejs
+++ b/v4/views/comments/new.ejs
@@ -1,34 +1,29 @@
-<%- include('partials/header'); -%>
+<%- include('../partials/header'); -%>
 
 <div class="container">
   <div class="row">
-    <p style="text-align: center;">Add new image</p>
+    <h2 style="text-align: center;">
+      Add New Comment to <%= campground.name %>
+    </h2>
     <div style="width: 40%; margin: 25px auto;">
-      <form action="/campgrounds" method="POST">
+      <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
         <div class="form-group">
           <input
             class="form-control"
             type="text"
-            placeholder="name"
-            name="name"
+            placeholder="text"
+            name="comment[text]"
           />
         </div>
         <div class="form-group">
           <input
             class="form-control"
             type="text"
-            placeholder="image url"
-            name="image"
+            placeholder="author"
+            name="comment[author]"
           />
         </div>
-        <div class="form-group">
-          <input
-            class="form-control"
-            type="text"
-            placeholder="description"
-            name="description"
-          />
-        </div>
+
         <div class="form-group">
           <button class="btn btn-lg btn-primary btn-block">Submit</button>
         </div>
@@ -38,4 +33,4 @@
   </div>
 </div>
 
-<%- include('partials/footer'); -%>
+<%- include('../partials/footer'); -%>
