--- a/v4/views/partials/header.ejs
+++ b/v4/views/partials/header.ejs
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     />
-
+    <link rel="stylesheet" href="/stylesheets/main.css" />
     <title>YelpCamp</title>
   </head>
   <body>
